<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#81c784"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/coupon_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_store"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coupon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_text"
            android:layout_below="@id/coupon_store"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coupon_expire_msg"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_below="@id/coupon_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coupon_expire_msg"
            android:textColor="#E91E63"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/coupon_expire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coupon_text"
            android:layout_alignStart="@id/coupon_expire_msg"
            android:layout_marginStart="95dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coupon_expire_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/coupon_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coupon_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coupon_code"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/coupon_category_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coupon_code"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coupon_category_msg"
            android:textColor="#072C9B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/coupon_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/coupon_code"
            android:layout_alignStart="@id/coupon_category_msg"
            android:layout_marginStart="92dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/coupon_category"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>